fixed an issue where footer nav bar was not responsive

--- a/flex/style.css
+++ b/flex/style.css
@@ -10,6 +10,7 @@ body {
 img.logo {
   object-fit: cover;
   max-width: 90vw;
+  border: 1px solid white;
 }
 
 h1 {
@@ -61,12 +62,12 @@ nav > ul > li > a {
 }
 
 @media only screen and (max-width: 360px) {
-  header > nav > ul {
+  nav > ul {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
   }
-  header > nav > ul > li + li {
+  nav > ul > li + li {
     margin: 0px;
   }
 }
